--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-  /* outline: 1px dashed red; */
+  outline: 1px dashed red;
 }
 
 .background {
@@ -14,7 +14,72 @@
 .header-photo {
   background-size: cover;
   background-position: center;
-  background-origin: border-box;
-  background-repeat: no-repeat;
   background-image: url('../src/img/header-photo.jpg');
+}
+
+.flashcardBack {
+  background: radial-gradient(
+      circle at top left,
+      transparent 9%,
+      #0a675c 10%,
+      #0a675c 15%,
+      transparent 16%
+    ),
+    radial-gradient(
+      circle at bottom left,
+      transparent 9%,
+      #0a675c 10%,
+      #0a675c 15%,
+      transparent 16%
+    ),
+    radial-gradient(
+      circle at top right,
+      transparent 9%,
+      #0a675c 10%,
+      #0a675c 15%,
+      transparent 16%
+    ),
+    radial-gradient(
+      circle at bottom right,
+      transparent 9%,
+      #0a675c 10%,
+      #0a675c 15%,
+      transparent 16%
+    ),
+    radial-gradient(circle, transparent 25%, #094c44 26%),
+    linear-gradient(
+      45deg,
+      transparent 46%,
+      #0a675c 47%,
+      #0a675c 52%,
+      transparent 53%
+    ),
+    linear-gradient(
+      135deg,
+      transparent 46%,
+      #0a675c 47%,
+      #0a675c 52%,
+      transparent 53%
+    );
+  background-size: 6em 6em;
+  background-color: #094c44;
+  opacity: 1;
+}
+
+/** Flipping card CSS  */
+
+.card-inner {
+  transform-style: preserve-3d;
+}
+.card.flipped .card-inner {
+  transform: rotateY(-180deg);
+}
+
+.card-front,
+.card-back {
+  backface-visibility: hidden;
+}
+
+.card-back {
+  transform: rotateY(-180deg);
 }
