--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-  outline: 1px dashed red;
+  /* outline: 1px dashed red; */
 }
 
 .background {
@@ -14,7 +14,7 @@
 .header-photo {
   background-size: cover;
   background-position: center;
-  background-image: url('../src/img/header-photo.jpg');
+  background-image: url('../public/img/header-photo.jpg');
 }
 
 .flashcardBack {
